--- a/renv.tex
+++ b/renv.tex
@@ -82,7 +82,7 @@
 
 \title{Environment}
 \author{Dyrehaugen Web Notebook}
-\date{2021-11-02}
+\date{2022-01-16}
 
 \begin{document}
 \maketitle
@@ -1719,6 +1719,44 @@ Note the logarithmic scale}
 \href{https://onlinelibrary.wiley.com/doi/full/10.1111/j.1530-9290.2011.00404.x}{Gierlinger (2011) Physical Economy of United States}
 \href{pdf/Gierlinger_2011_Physical_Economy_of_US.pdf}{(pdf)}
 
+\hypertarget{mining}{%
+\section{Mining}\label{mining}}
+
+\hypertarget{battery-metals}{%
+\subsection{Battery Metals}\label{battery-metals}}
+
+\emph{Beslik}
+
+Rare earth metals are at the core of every major technology today. Smartphones, laptops, wind turbines, electric cars, and medical devices, you name it.
+
+They're also widely used in defence technology like jets and guided missile systems. Rare earth metals are essential to modern technology.
+
+It's important to distinguish between: `rare-', `precious-', and `critical-' earth elements. The terms are not interchangeable, but unfortunately often are in popular media.
+
+It's also important to distinguish between `reserves' and `resources'. Reserves denote the amount that can be technically recovered at a cost that is financially feasible at the present price. Resources include all that can be technically recovered at any price.
+
+Electric vehicles typically use two precious earth metals: gold and silver. These are used in minute quantities in the circuit boards, which also occurs in modern fossil fuelled vehicles. The circuit boards run the electronics. These valuable metals are fully recyclable.
+
+Critical earth elements typically found in EV batteries are: lithium and cobalt, both fully recyclable. Both Lithium and cobalt metals can be reused over and over repeatedly. These two elements are not particularly rare -- cobalt can be found in most rocks, and lithium is the first metal in the periodic table and one of only three elements created in the primordial Big Bang. Lithium is the 32nd most common element on our planet.
+
+But both metals are critical because of modern societies' dependence on lithium-ion battery technology for mobile phones, laptops, and now EVs. And also, in the case of cobalt, because of geopolitics: the bulk of the cobalt supply comes from the politically unstable Democratic Republic of Congo. While there are plenty of lithium and cobalt resources, there are fewer reserves of them. Cobalt is a by-product of nickel and copper mines, and is therefore dependent on the economic viability of those mining operations.
+
+Worldwide sources of lithium are broken down by ore-deposit type as follows: closed-basin brines, 58\%; pegmatites and related granites, 26\%; lithium-enriched clays, 7\%; oilfield brines, 3\%; geothermal brines, 3\%; and lithium-enriched zeolites, 3\% (2013 statistics USGS). Of those, closed basin brines are the most important source of lithium reserves.
+
+Put simplistically, dissolved lithium salts are most commonly mined by drilling down to underground saline deposits and pumping the saline to the surface where it is left to dry in the desert sun, before being processed into lithium metal (and other elements, like potash and magnesium).
+
+China currently holds a near monopoly on supply. China mines 94-97\% of the rare earth metals globally and, while efforts have increased in America and Europe to find alternative supplies, there are still no clear avenues to diversifying supply. China has become the world's largest producer simply because Western nations don't want to do the dirty work that is required to produce rare earths.
+
+The reason most often cited for this shift to China is cheap labour. However another, which is often tacitly acknowledged, is lack of environmental regulation. This has meant that costs associated with proper environmental protection -- required if manufacturing occurred in the west -- have not been built in to the price of goods.
+
+Australia has substantial rare element deposits. However, the current major Australia processing operation involves a site in Malaysia. This controversial project by Lynas has sparked a major local environmental protest campaign led by Malay residents concerned about environmental and health impacts.
+
+Rare earth metals are currently extracted through mining, which comes with a number of downsides. First, it's costly and inefficient because extracting even a very small amount of rare earth metals requires large areas to be mined. Second, the process can have enormous environmental impacts. Mining for rare earth minerals generates large volumes of toxic and radioactive material, due to the co-extraction of thorium and uranium, radioactive metals which cause problems for the environment and human health.
+
+These are the \href{https://www.mining.com/web/ranked-top-25-nations-producing-battery-metals-for-the-ev-supply-chain/}{locations} where the mining of battery metals is taking place.
+
+\href{https://esgonasunday.substack.com/p/week-51-merry-electric-christmas}{Beslik (2021) Merry Electric Christmas}
+
 \hypertarget{pollution}{%
 \chapter{Pollution}\label{pollution}}
 
@@ -1775,6 +1813,45 @@ would shift more obligation to industry for the environmental price-tag of their
 
 \href{https://www.independent.co.uk/climate-change/news/john-oliver-plastics-recycling-b1820614.html}{Independent}
 
+\hypertarget{dirty-thirty}{%
+\subsection{Dirty-Thirty}\label{dirty-thirty}}
+
+\emph{Thoumi}
+
+\includegraphics{fig/Dirty-Thirty.png}
+
+• In 2019, 30 publicly traded companies - the Dirty Thirty - produced
+58\% of single-use plastic (SUP) 1 . The top 10 - ExxonMobil, Dow, Indorama,
+Sinopec, LyondellBasell, PetroChina, Alpek, Aramco, Reliance and Braskem -
+were responsible for 39\%.
+• The Dirty Thirty footprint is highly concentrated in a few clusters, including
+the US Plastic Production Corridor and the EU Trilateral Chemical Region.
+• The top ten equity and top ten fixed income investors own 76\% and 43\%
+of the Dirty Thirty's equity and debt respectively. BlackRock, Vanguard
+and Capital Group are on both lists.
+• The Dirty Thirty's SUP supply chain encompasses multiple risk factors ranging
+from carbon and other emissions, end-product waste and operational spills.
+The industry poses threats to society and human health, with amplified
+effects often felt by more marginalised or vulnerable communities.
+• As a result of its wide-ranging impact, the industry is more exposed
+than others to regulation, policy change and legal challenges. The Dirty
+Thirty in particular are experiencing increasing pressure from business
+clients to meet 2025 SUP reduction commitments, increasingly viewed as
+accountable for combatting plastic pollution.
+• Plastic pollution is forecast to triple by 2040, with 80\% expected to come
+i
+from SUP. Without serious change, by 2050, in a 1.5°C scenario, plastic
+lifecycle emissions are forecast to make up roughly 13\% of carbon budgets. ii
+• Solving the plastic pollution crisis, including the pollution from plastic
+production itself - for example, GhG emissions and toxic chemical releases
+- will play a key role in addressing the climate crisis and achieving goals
+outlined in the Paris Agreement.
+• Both solutions and green financing are available for companies looking to
+retool towards sustainable plastic production, but uptake is slow among the
+Dirty Thirty, many of whom appear to be adopting a wait-and-see approach.
+
+\href{pdf/Dirty-Thirty.pdf}{Thoumi (2021) Dirty-Thirty (pdf)}
+
 \hypertarget{virgin-polymer-production}{%
 \subsection{Virgin Polymer Production}\label{virgin-polymer-production}}
 
@@ -1820,6 +1897,28 @@ The Minderoo Foundation misconstrues the relationship between plastics and our c
 Glaringly absent from the Minderoo report is a recognition of plastic's critical role in enabling innovations we need for sustainable infrastructure, such as solar panels, wind turbines, and electric vehicles and charging stations.
 
 \href{https://www.prnewswire.com/news-releases/misleading-minderoo-report-fails-to-factor-in-plastics-key-role-in-lowering-greenhouse-gas-emissions-301293161.html}{American Chemistry Council}
+
+\hypertarget{nurdles}{%
+\subsection{Nurdles}\label{nurdles}}
+
+\emph{McVeigh}
+
+Nurdles, the colloquial term for ``pre-production plastic pellets'', are the little-known building block for all our plastic products. The tiny beads can be made of polyethylene, polypropylene, polystyrene, polyvinyl chloride and other plastics. Released into the environment from plastic plants or when shipped around the world as raw material to factories, they will sink or float, depending on the density of the pellets and if they are in freshwater or saltwater.
+
+They are often mistaken for food by seabirds, fish and other wildlife. In the environment, they fragment into nanoparticles whose hazards are more complex. They are the second-largest source of micropollutants in the ocean, by weight, after tyre dust. An astounding 230,000 tonnes of nurdles end up in oceans every year.
+
+Like crude oil, nurdles are highly persistent pollutants, and will continue to circulate in ocean currents and wash ashore for decades. They are also ``toxic sponges'', which attract chemical toxins and other pollutants on to their surfaces.
+
+``The pellets themselves are a mixture of chemicals -- they are fossil fuels,'' says Tom Gammage, at the Environmental Investigation Agency (EIA), an international campaign group. ``But they act as toxic sponges. A lot of toxic chemicals -- which in the case of Sri Lanka are already in the water -- are hydrophobic {[}repel water{]}, so they gather on the surface of microplastics.
+
+``Pollutants can be a million times more concentrated on the surface of pellets than in the water,'' he says. ``And we know from lab studies that when a fish eats a pellet, some of those pollutants come loose.''
+
+Nurdles also act as ``rafts'' for harmful bacteria such as E coli or even cholera, one study found, transporting them from sewage outfalls and agricultural runoff to bathing waters and shellfish beds. The phenomenon of ``plastic rafting'' is increasing.
+Advertisement
+
+Yet nurdles, unlike substances such as kerosene, diesel and petrol, are not deemed hazardous under the International Maritime Organization's (IMO's) dangerous goods code for safe handling and storage. This is despite the threat to the environment from plastic pellets being known about for three decades, as detailed in a 1993 report from the US government's Environmental Protection Agency on how the plastics industry could reduce spillages.
+
+McVeigh (Guardian) (2021) Nurdles: the worst toxic waste you've probably never heard of{]}(\url{https://www.theguardian.com/environment/2021/nov/29/nurdles-plastic-pellets-environmental-ocean-spills-toxic-waste-not-classified-hazardous})
 
 \hypertarget{finance}{%
 \subsection{Finance}\label{finance}}
@@ -1926,7 +2025,47 @@ value chains.
 \hypertarget{chemicals}{%
 \section{Chemicals}\label{chemicals}}
 
-\emph{PFAS - ``forever chemicals''}
+\hypertarget{chemicals-pollution}{%
+\subsection{Chemicals' Pollution}\label{chemicals-pollution}}
+
+\begin{quote}
+The chemicals industry consumes more than 10\% of fossil fuels produced globally and emits an estimated 3.3 gigatons of greenhouse gas emissions a year, more than India's annual emissions.
+\end{quote}
+
+While the industry has an important role to play in moving to low-carbon economies -- providing coatings for solar panels, lightweight plastics to reduce vehicles' energy consumption and insulating materials for buildings -- it's also hugely carbon intensive and predicted to become more so.
+
+Oil companies have been betting on chemicals as a way to remain profitable as the world pledges to turn away from fossil fuel energy. The International Energy Agency predicted that petrochemicals could account for 60\% of oil demand in the next decade.
+
+The chemicals sector is the largest industrial user of oil and gas but it has the third-largest carbon footprint -- behind steel and cement -- because only about half of the fossil fuels that the industry consumes are burned for their energy. The rest is used as feedstock for products such as plastics with the emissions released only when these products reach the end of their lives, for example, when waste plastic packaging or an old mattress is incinerated.
+
+Most of the industry's direct carbon dioxide emissions come from burning fossil fuels to power chemical transformations, many of which take place at high temperatures and pressures.
+
+Chemists continue to look for ways to power traditionally heat-driven chemical transformations with electricity instead -- such as the process of converting nitrogen to ammonia, mostly used for fertilizer, which requires temperatures of about 500C (932F).
+
+Many chemical products themselves cannot be decarbonized because they are made of carbon.
+
+Removing fossil fuels from the raw materials used to create carbon-based chemicals and materials is crucial. Products made from fossil fuels -- such as clothes, toys and paints -- is a carbon debt, because the carbon embedded within them will only be emitted in the future.
+
+To stop adding to this debt, chemicals and materials could be made with sources of carbon that are already above ground, such as plants. Bioplastics -- made with plant materials such as sugar, corn or seaweed -- are booming.
+
+Another idea is to turn waste products into raw materials for the chemical industry. Chemists have been using agricultural waste or waste plastics -- even the ultimate waste material, carbon dioxide -- as feedstocks. A Berlin-based startup, Made of Air, is attempting to create plastics from wood waste, while an Icelandic company, Carbon Recycling International, turns captured carbon dioxide emissions into methanol, used in fuels and for making other chemicals such as formaldehyde.
+
+But all these ideas -- especially those involving a shift in feedstocks -- are very hard to implement.
+
+Technologies to turn agricultural or plastic waste into new chemicals are still unproven on a large scale and using carbon dioxide as a raw material will require vast amounts of zero-carbon energy.
+
+Manufacturers making products with plants rather than fossil fuels need to ensure that they do not create new problems through deforestation, destroying wildlife habitat, raising food prices or increasing the use of water or pesticides. Biomass resources also tend to be more spread out, whereas traditionally, chemical plants stay close to where fossil fuel resources are easily accessible.
+
+The clean power infrastructure requirements alone are tremendous. Electrifying Europe's chemicals sector would require 4,900 terawatts of renewable electricity - almost double the total amount of electricity Europe generated in 2019.
+
+One important, but neglected, lever for cutting emissions from the chemical sector is to simply use and produce fewer chemicals.
+
+The business model is driven by how many chemicals you sell, it's not necessarily driven by the added societal value of the chemical.
+
+\href{https://www.theguardian.com/environment/2021/nov/22/chemicals-industry-pollution-emissions-climate}{Guardian (2021) How the chemicals industry's pollution slipped under the radar}
+
+\hypertarget{pfas---forever-chemicals}{%
+\subsection{PFAS - ``forever chemicals''*}\label{pfas---forever-chemicals}}
 
 The end of humankind? It may be coming sooner than we think, thanks to hormone-disrupting chemicals that are decimating fertility at an alarming rate around the globe. A new book called Countdown, by Shanna Swan, an environmental and reproductive epidemiologist at Icahn School of Medicine at Mount Sinai in New York, finds that sperm counts have \href{https://www.theguardian.com/us-news/2021/feb/26/falling-sperm-counts-human-survival}{dropped almost 60\% since 1973}. Following the trajectory we are on, Swan's research suggests sperm counts could reach zero by 2045. Zero. Let that sink in. That would mean no babies. No reproduction. No more humans. Forgive me for asking: why isn't the UN calling an emergency meeting on this right now?
 
@@ -2413,6 +2552,41 @@ Deforestation, a significant threat to biodiversity, is accelerated by global de
 
 \href{https://www.nature.com/articles/s41559-021-01417-z}{Hoang (2021) Mapping Deforestation Footprint(Nature, paywall)}
 
+\hypertarget{wetland}{%
+\section{Wetland}\label{wetland}}
+
+\emph{Global Wetland Outlook}
+
+\href{https://www.global-wetland-outlook.ramsar.org/outlook}{Global Wetland Outlook 2021 Update}
+
+-- Våtmarker lagrer over 30 prosent av alt landbasert karbon og er viktige for helse- mat- og vannsikkerhet.
+
+Den internasjonale avtalen om våtmarker -- Ramsarkonvensjonen -- har lansert en ny spesialrapport om situasjonen for verdens gjenværende våtmarker, Global Wetland Outlook: Special Edition 2021.
+
+Rapporten viser at vi fortsetter å ødelegge eller forringe våtmarkene i et alarmerende tempo. Globalt har 35 prosent av våtmarkene gått tapt siden 1970. Våtmarker er vårt mest truede økosystem, og de forsvinner tre ganger raskere enn skogene.
+
+Våtmarker er vårt mest effektive landbaserte økosystem for å fange karbon. Torvmarker, som blant annet inkluderer det meste av norske myrer, dekker kun 3 prosent av jordens landoverflate, men lagrer ifølge rapporten likevel 30 prosent av alt landbasert karbon.
+
+Hovedfunn fra rapporten:
+
+\begin{itemize}
+\tightlist
+\item
+  En fjerdedel av verdens våtmarksavhengige arter er i ferd med å bli utryddet.
+\item
+  Effektene av klimaendringer på våtmark kommer mye raskere enn forventet. Dette slår særlig ut i arktiske strøk og i fjellet, men også langs kysten.
+\item
+  Arealbruksendringer er den viktigste årsaken til at våtmarker har forsvunnet på land. Globalt har landbruk ødelagt eller forringet mer enn halvparten av verdens våtmarker.
+\item
+  Dårlig forvaltning av våtmarker har økt graden av vannmangel og vannbårne sykdommer, og det er anslått at dette bidrar til millioner av dødsfall hvert år.
+\item
+  Våtmark er mange steder avgjørende for tilpasning til et klima med våtere og villere vær, blant annet mangroveskog og torvmarker.
+\item
+  Intakte og velfungerende våtmarker er avgjørende for å nå de globale klimamålene, FNs bærekraftsmål og målene i det globale rammeverket for biologisk mangfold som skal vedtas i 2022.
+\end{itemize}
+
+\href{https://www.miljodirektoratet.no/aktuelt/nyheter/2021/desember-2021/vatmark-forsvinner-tre-ganger-raskere-enn-skogene/}{Miljødirektoratet (Norway)}
+
 \hypertarget{soil}{%
 \section{Soil}\label{soil}}
 
@@ -2621,6 +2795,15 @@ Despite making significant progress, the report warns, a third of key biodiversi
 
 \href{https://www.theguardian.com/environment/2021/may/19/governments-achieve-10-year-target-of-protecting-17-percent-land-aoe}{Guardian}
 
+\hypertarget{communal-conservation}{%
+\subsection{Communal Conservation}\label{communal-conservation}}
+
+\emph{Nijhuis}
+
+In southern Africa in the 1980s, some conservationists recognised that parks and reserves, many created by colonial governments, had divided subsistence hunters and farmers from much of the wildlife that had long sustained them -- and which, in some cases, they'd managed as a commons for generations. The resulting lack of local support meant that even the best-patrolled park boundaries were vulnerable to incursions by human neighbours, people unlikely to tolerate -- much less protect -- the large, sometimes troublesome species that ranged beyond even the largest reserves.
+
+\href{The\%20miracle\%20of\%20the\%20commons}{Nijhuis (2021) The miracle of the commons}
+
 \hypertarget{nashulai}{%
 \subsection{Nashulai}\label{nashulai}}
 
@@ -2689,6 +2872,31 @@ That will be detrimental to biodiversity.
 The headline target of the UNEP initiative is to restore 3.5 million square kilometres of land over the coming decade -- slightly more than the size of India, or just over 2 per cent of the world's land surface.
 
 \href{https://www.newscientist.com/article/mg24933223-300-rescue-plan-for-nature-how-to-fix-the-biodiversity-crisis/}{New Scientist}
+
+\hypertarget{natural-regeneration}{%
+\subsection{Natural regeneration}\label{natural-regeneration}}
+
+Tropical forests have the potential to almost fully regrow if they are left untouched by humans for about 20 years. This is due to a multidimensional mechanism whereby old forest flora and fauna help a new generation of forest grow -- a natural process known as ``secondary succession''.
+
+More than 90 researchers from all over the world came together to analyse exactly how tropical forest regrowth takes place. They pored over data about forest recovery from three continents, 77 sites and 2,275 plots of land in the Americas and West Africa. From there, they evaluated 12 specific criteria, such as the soil, plant functioning, ecosystem structure and biodiversity, and more. They then modelled this data -- without which they would have had to wait for over 100 years to see this happen in the real world -- with a technique called chronosequencing, allowing them to infer long-term trends in forest recovery.
+
+The researchers looked in particular at what happens to tropical forest land that has been used for agriculture or farming and is then abandoned after a couple of seasons. They found that the old forest portion -- including some fertile soil, any residual trees, seed banks and maybe stumps that can resprout -- created a nourishing, interconnected ecosystem for new forest to start to grow.
+
+The researchers found that different aspects take, respectively, more or less time to recover to the levels of ``old forest'' before it was used. Soil takes an average of 10 years to recover to its previous status, plant community and animal biodiversity take 60 years, and overall biomass takes a total of 120, according to their calculations.
+
+But overall, tropical forests can get back to roughly 78\% of their old-growth status in just 20 years.
+
+These are calculations, and one of the constraints of chronosequence-based analyses is that every location analysed is assumed to have the same history and successional dynamics.
+
+``The secondary forests are like teenagers. They soak up carbon like crazy and they empty your fridge,''
+
+A lot of the promises that have been made about planting trees in order to restore forests across the world are unrealistic. Most of the time, 30\%-50\% of those trees die, and they only pertain to a couple of species that cannot mimic the natural biodiversity of forests.
+
+Use natural regrowth where you can and plant actively and restore actively where you need to. There's a case-by-case approach, and this all depends on the local conditions and also on the local needs of the people because they live in these landscapes.
+
+\href{http://www.science.org/doi/10.1126/science.abh3629}{Science (paywall)}
+
+\href{https://www.theguardian.com/environment/2021/dec/09/tropical-forests-can-regenerate-in-just-20-years-without-human-interference}{Guardian (2021)}
 
 \hypertarget{regreening-sinai}{%
 \subsection{Regreening Sinai}\label{regreening-sinai}}
