--- a/renv.tex
+++ b/renv.tex
@@ -82,7 +82,7 @@
 
 \title{Environment}
 \author{Dyrehaugen Web Notebook}
-\date{2022-01-16}
+\date{2022-06-30}
 
 \begin{document}
 \maketitle
@@ -484,6 +484,16 @@ We have only discovered 15% ofliving species
 ????
 
 \href{https://l.facebook.com/l.php?u=http\%3A\%2F\%2Fwww.hellocanaryislands.com\%2F\%3Ffbclid\%3DIwAR0KpL92zBE9DSFFBBlR3nUzvBiOeg8A-GavXdo7iG3FkfXs-qQJkzABYSM\&h=AT1b3VHRAPNbUMsETBii684uDQXiUvMGYAb5RKmfj1-SBxcHO-WGcEUt0cMBKL-6pyGiar4PybInjdaW7O0uy9zyVKsxJvjDmeHz1S7mYi78gtfsKSbXok8nzY0\&__tn__=\%2Cd-UC\%2CP-R\&c\%5B0\%5D=AT08xUEPHg6AG1h8CijMYsvQsAewR1efrP3cTARQlOlbbp1OjjOS7l5EEWN56QpEr43eZMYLpDdxhfjtxcRvHu6q_-C91aQ5RmmiqVUDwPFBn4dyozTyAWj8qB_XR8d3SnApk8jDSA3i_XUfVH9WN1jKbjfjnlou5zK5C5yo0mjfWWyz9kt0JQMtww}{Canary Islands promotion}
+
+\hypertarget{human-self-awareness}{%
+\section{Human Self-Awareness}\label{human-self-awareness}}
+
+\emph{Austin}
+
+If it seems frivolous to propose the solution to our problems is some new `Age', as if such a thing might be produced to order, consider that the momentous recognition of the Anthropoceneis exactly the sort of event that might induce an Age. The crystallizing of the Anthropocene is a stunning milestone in the history of human self-awareness -- `Oh, I see, we're that big!' Big enough to change planetary processes. Big enough that Earth is not the immutable backdrop we assumed it to be. Possibly, the only feasible response to such a profound reappraisal of our context is an equiproportional change in human cognition and self-organization. Indeed, with simultaneous advances in Earth sciences and neurosciences, our sense of the world and of the brain we use to navigate it, is changing rapidly and dramatically, with us sandwiched in between. It is impossible to imagine that human beings will not be deeply changed by current events.
+
+\href{https://channelmcgilchrist.com/articles/the-matrix-of-the-emissary/}{Austin (2021) The Matrix of the Emissary - Market Primacy and The Sustainability Cris\\
+is}
 
 \hypertarget{material-footprint}{%
 \section{Material Footprint}\label{material-footprint}}
@@ -2305,6 +2315,51 @@ Oxitec's latest strain of GM mosquitoes is designed to spread the lethal gene mo
 
 \hypertarget{species}{%
 \chapter{Species}\label{species}}
+
+\hypertarget{birds}{%
+\section{Birds}\label{birds}}
+
+\emph{Guardian}
+
+Researchers pored over data collected since the mid-60s in Britain and the Netherlands on 60 different species, including the house sparrow, the crested tit, the reed bunting, the bullfinch and the willow warbler. They zero in on how these birds have changed over time with regard to their egg-laying schedules, number of offspring and morphology.
+
+The scientists investigated what proportion of changes over time were linked to warming, and whether warming affected some species or traits more than others, as well as whether other factors unrelated to temperature reinforced these effects.
+
+\href{https://www.theguardian.com/environment/2022/mar/10/climate-change-fundamentally-affecting-european-birds-study-shows}{Guardian (2022) Climate change fundamentally affecting European birds}
+
+\emph{McLean Abstract}
+
+Many wild populations are experiencing temporal changes in life-
+history and other phenotypic traits, and these changes are fre-
+quently assumed to be driven by climate change rather than
+nonclimatic drivers. However, this assumption relies on three con-
+ditions: that local climate is changing, traits are sensitive to climate
+variability, and other drivers are not also changing over time.
+Although many studies acknowledge one or more of these condi-
+tions, all three are rarely checked simultaneously. Consequently,
+the relative contribution of climate change to trait change, and the
+variation in this contribution across traits and species, remain
+unclear. We used long-term datasets on 60 bird species in Europe
+to test the three conditions in laying date, offspring number, and
+body condition and used a method that quantiﬁes the contribu-
+tion of warming temperatures to changes in traits relative to other
+effects. Across species, approximately half of the magnitude of
+changes in traits could be attributed to rising mean temperature,
+suggesting that increasing temperatures are likely the single most
+important contributor to temporal trends and emphasizes the
+impact that global warming is having on natural populations.
+There were also substantial nontemperature-related temporal
+trends (presumably due to other changes such as urbanization),
+which generally caused trait change in the same direction as
+warming. Attributing temporal trends solely to warming thus
+overestimates the impact of warming. Furthermore, contributions
+from nontemperature drivers explained most of the interspeciﬁc
+variation in trait changes, raising concerns about comparative
+studies that attribute differences in temporal trends to species dif-
+ferences in climate-change sensitivity.
+
+\href{https://www.pnas.org/doi/epdf/10.1073/pnas.2105416119}{McLean (2022) Warming temperatures drive at least half of themagnitude of long-term trait changes inEuropean birds}
+\href{pdf/McLean_2022_Warming_Bird_Traits.pdf}{(pdf)}
 
 \hypertarget{polar-bear}{%
 \section{Polar Bear}\label{polar-bear}}
