--- a/renv.tex
+++ b/renv.tex
@@ -82,7 +82,7 @@
 
 \title{Environment}
 \author{Dyrehaugen Web Notebook}
-\date{2022-08-28}
+\date{2022-09-15}
 
 \begin{document}
 \maketitle
@@ -2312,6 +2312,41 @@ What wasn't clear was whether those rare offspring, often sickly in the lab, cou
 Oxitec's latest strain of GM mosquitoes is designed to spread the lethal gene more effectively. Instead of killing offspring regardless of sex, it eliminates only the females. Male offspring survive to pass on the lethal gene. In a Brazilian field trial, these second-generation mosquitoes caused local populations to dip by as much as 96\%, Oxitec announced in June.
 
 \href{https://www.sciencemag.org/news/2019/09/study-dna-spread-genetically-modified-mosquitoes-prompts-backlash}{Servick in Science}
+
+\hypertarget{light-pollution}{%
+\section{Light Pollution}\label{light-pollution}}
+
+\emph{Guardian}
+
+\textbf{Transition to blue light radiation across Europe increases suppression of sleep hormone melatonin}
+
+The orange-coloured emissions from older sodium lights are rapidly being replaced by white-coloured emissions produced by LEDs.
+The increased blue light radiation associated with it is causing ``substantial biological impacts''.
+
+Chief among the health consequences of blue light is its ability to suppress the production of melatonin, the hormone that regulates sleep patterns in humans and other organisms.
+
+The increase in blue light radiation in Europe has also reduced the visibility of stars in the night sky, which the study says ``may have impacts on people's sense of nature''. Blue light can also alter the behavioural patterns of animals including bats and moths, as it can change their movements towards or away from light sources.
+
+Local street lighting has dramatically reduced the abundance of nocturnal insect populations.
+
+Light pollution can dramatically impact invertebrates, whether that be how they go about their daily lives, or even by reducing populations of species that live in habitats lit by LED lights. Given that invertebrates are already suffering dramatic declines, it is vital that we relieve them from all pressures to provide the best chance of recovery.
+
+We should consider light from a wider biological perspective than that of just humans {[}and{]} we must focus on better quality lighting that is harmonious with our natural world. Better quality and lower levels of lighting would help save energy, and lower financial costs, while also making our environment safer for invertebrates.
+
+National targets to reduce levels of light pollution are needed.
+Measurements are patchy and uncoordinated.
+
+\href{https://www.theguardian.com/environment/2022/sep/14/increase-in-led-lighting-risks-harming-human-and-animal-health}{Guardian (2022) Increase in LED lighting `risks harming human and animal health'}
+
+\emph{Sanchez de Miguel Abstarct}
+
+The nighttime environment of much of Earth is being changed rapidly by the introduction of artificial lighting. While data on spatial and temporal variation in the intensity of artificial lighting have been available at a regional and global scale, data on variation in its spectral composition have only been collected for a few locations, preventing variation in associated environmental and human health risks from being mapped. Here, we use imagery obtained using digital cameras by astronauts on the International Space Station to map variation in the spectral composition of lighting across Europe for 2012--2013 and 2014--2020. These show a regionally widespread spectral shift, from that associated principally with high-pressure sodium lighting to that associated with broad white light-emitting diodes and with greater blue emissions. Reexpressing the color maps in terms of spectral indicators of environmental pressures, we find that this trend is widely increasing the risk of harmful effects to ecosystems.
+
+\includegraphics{fig/Light_Pollution_Europe.png}
+
+\href{https://www.science.org/doi/10.1126/sciadv.abl6891}{Sanchez de Miguel (2022) Environmental risks from artificial nighttime lighting widespread and increasing across Europe}
+\href{pdf/Sanchez-de_Miguel_2022_Environmetal_Risks_from_Artificalial_Nighttime_Lightning.pdf}{(pdf)}
+\href{pdf/Sanchez-de_Miguel_2022_Environmetal_Risks_from_Artificalial_Nighttime_Lightning_SI.pdf}{(pdf SI)}
 
 \hypertarget{species}{%
 \chapter{Species}\label{species}}
